@@ -1,3 +1,9 @@
+2006-09-07  Michal Ludvig  <michal@logix.cz>
+
+	* Read default MySQL options from one of my.cnf files.
+	  Subsequently don't require the connect options
+	  on the command line.
+
 2006-09-06  Michal Ludvig  <michal@logix.cz>
 
 	* Check for MySQL version both in configure.in and
